<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="shoe_store_welcome">Welcome, here you will find various types of shoes.   You can also add new shoes to the store.</string>
    <string name="instructions">Instructions</string>
    <string name="store_listing">Store</string>
    <string name="instructions_1">1. You can view the list of the all the shoes in the store.</string>
    <string name="instructions_2">2. You can also add a new shoe with details to the store.</string>
    <string name="instructions_3">3. The newly added shoe will be shown in the store.</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="name">Shoe Name</string>
    <string name="size">Shoe Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="image">Shoe Image Url</string>
    <string name="error_shoe_name">Enter shoe name</string>
    <string name="error_shoe_size">Enter show size</string>
    <string name="error_shoe_company">Enter show company</string>
    <string name="error_shoe_description">Enter show description</string>
    <string name="error_email">Email is empty or invalid.</string>
    <string name="error_password">Password can\'t be empty.</string>
    <string name="error_no_shoes">No shoes in the store, please add some shoes</string>
</resources>
