<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handler"
            type="com.udacity.shoestore.handlers.Handlers" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/tvShoeStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/shoe_store"
            android:textSize="@dimen/text_25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="start"
            android:text="@string/shoe_store_welcome"
            android:textSize="@dimen/text_15" />

        <Button
            android:id="@+id/btnInstructions"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:onClick="@{(v)->handler.onInstructions(v)}"
            android:text="@string/instructions" />

    </LinearLayout>
</layout>
